--- a/.github/workflows/get-specials.yml
+++ b/.github/workflows/get-specials.yml
@@ -3,6 +3,10 @@ name: Run Python Scripts
 on:
   schedule:
     - cron: '0 0 * * *'  # Runs at 00:00 UTC every day
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   run-scripts:
