--- a/.github/workflows/get-specials.yml
+++ b/.github/workflows/get-specials.yml
@@ -2,7 +2,7 @@ name: Run Python Scripts
 
 on:
   schedule:
-    - cron: '0 0 */2 * *'  # Runs at 00:00 UTC every second day
+    - cron: '0 0 * * *'  # Runs at 00:00 UTC every day
 
 jobs:
   run-scripts:
